@@ -17,13 +17,12 @@
 package org.springframework.xml.stream;
 
 import java.io.Reader;
-
 import javax.xml.stream.XMLInputFactory;
 import javax.xml.stream.XMLStreamException;
 
 public class StaxEventXmlReaderTest extends AbstractStaxXmlReaderTestCase {
 
-    protected StaxXmlReader createStaxXmlReader(Reader reader) throws XMLStreamException {
+    protected AbstractStaxXmlReader createStaxXmlReader(Reader reader) throws XMLStreamException {
         XMLInputFactory inputFactory = XMLInputFactory.newInstance();
         return new StaxEventXmlReader(inputFactory.createXMLEventReader(reader));
     }
